--- a/mluilias.css
+++ b/mluilias.css
@@ -227,6 +227,14 @@ div.ilFrameH, div.ilFrameTL, div.ilFrameTR, div.ilFrameBR, div.ilFrameBL {
 	background: none
 }
 
+div.ilLogin {
+	padding-right: 0
+}
+
+div.ilMainMenuSearch {
+	margin: 0
+}
+
 form.ilMainMenuSearch {
 	overflow: hidden
 }
@@ -234,7 +242,7 @@ form.ilMainMenuSearch {
 form.ilMainMenuSearch > div {
 	position: relative !important;
 	float: right;
-	right: 0;
+	right: 0 !important;
 }
 
 
@@ -243,13 +251,14 @@ form.ilMainMenuSearch > div {
 div.ilMainMenu {
 	clear: both;
 	border: 1px solid #86a841;
+	border-bottom-color: #718f38;
 	text-shadow: 0 1px 0 rgba(255,255,255,.5);
 	-webkit-border-radius: 7px;
 	-moz-border-radius: 7px;
 	border-radius: 7px;
-	-webkit-box-shadow: 0 -1px 4px rgba(0,0,0,.2);
-	-moz-box-shadow: 0 -1px 4px rgba(0,0,0,.2);
-	box-shadow: 0 -1px 4px rgba(0,0,0,.2);
+	-webkit-box-shadow: 0 1px 4px rgba(0,0,0,.2);
+	-moz-box-shadow: 0 1px 4px rgba(0,0,0,.2);
+	box-shadow: 0 1px 4px rgba(0,0,0,.2);
 	background: #9bc34b;
 	background: -moz-linear-gradient(top, #a1cb4f 0%, #9bc34b 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a1cb4f), color-stop(100%,#9bc34b));
@@ -260,7 +269,7 @@ div.ilMainMenu {
 	background: linear-gradient(top, #a1cb4f 0%,#9bc34b 100%);
 	position: relative;
 	padding: 0;
-	margin-top: 2em
+	margin: 2em 0 1em 0
 }
 
 	div.ilMainMenu:before {
@@ -269,9 +278,9 @@ div.ilMainMenu {
 		left: 0;
 		top: 0;
 		width: 100%;
-		height: 7px;
+		height: 100%;
 		border-top: 1px solid #fff;
-		border-top: 1px solid rgba(255,255,255,.4);
+		border-top: 1px solid rgba(255,255,255,.6);
 		-webkit-border-radius: 7px;
 		-moz-border-radius: 7px;
 		border-radius: 7px;
@@ -282,7 +291,9 @@ div.ilMainMenu li {
 	float: left;
 }
 
-div.ilMainMenu a:link {
+div.ilMainMenu a:link,
+div.ilMainMenu a.MMInactive:link, 
+div.ilMainMenu a.MMInactive:visited {
 	color: #005133;
 	display: block;
 	float: left;
@@ -292,6 +303,8 @@ div.ilMainMenu a:link {
 	-moz-transition: background .2s ease-in-out;
 	-o-transition: background .2s ease-in-out;
 	transition: background .2s ease-in-out;
+	position: relative;
+	z-index: 99
 }
 
 	div.ilMainMenu a:hover,
