--- a/mluilias.css
+++ b/mluilias.css
@@ -63,7 +63,7 @@ body { font: 13px/1.231 sans-serif; *font-size:small; }
 
 pre, code, kbd, samp { font-family: monospace, sans-serif; }
   
-a:link { -webkit-tap-highlight-color: #FF5E99; }
+a:link { -webkit-tap-highlight-color: #000; }
 
 ul, ol { margin-left: 2em; }
 ol { list-style-type: decimal; }
@@ -726,7 +726,7 @@ div.ilc_question_Standard {
 	
 	.ilLoginPage #formlogin {
 		border-bottom: 3px solid #9bc34b;
-		margin-bottom: 1em;
+		margin-bottom: 0;
 		padding-bottom: 1em
 	}
 	
@@ -769,7 +769,15 @@ div.ilc_question_Standard {
 	}
 
 #ilLoginHelpers {
-	
+	text-align: center;
+	margin: 0;
+	padding: 2em 0
+}
+
+#ilLoginHelpers .publiclink {
+	font-size: 1em;
+	margin-bottom: 1em;
+	display: block
 }
 
 #languageselection,
@@ -798,6 +806,9 @@ div.ilc_question_Standard {
 	text-align: center;
 }
 
+/* Messages
+--------------------------------*/
+
 .warning {
 	text-align: center;
 	background: #fbc8c8;
@@ -806,5 +817,51 @@ div.ilc_question_Standard {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
-	padding: 1em
+	padding: 1em;
+	color: #444;
+}
+
+/* Non-semantic helper classes 
+--------------------------------*/
+
+/* For image replacement */
+.ir { display: block; text-indent: -999em; overflow: hidden; background-repeat: no-repeat; text-align: left; direction: ltr; }
+
+/* Hide for both screenreaders and browsers */
+.hidden { display: none; visibility: hidden; }
+
+/* Hide only visually, but have it available for screenreaders */
+.visuallyhidden, .ilAccHidden, .ilAccHeadingHidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
+/* Extends the .visuallyhidden class to allow the element to be focusable when navigated to via the keyboard */
+.visuallyhidden.focusable:active,
+.visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
+
+/* Hide visually and from screenreaders, but maintain layout */
+.invisible { visibility: hidden; }
+
+/* The Magnificent Clearfix */
+.clearfix:before, .clearfix:after { content: ""; display: table; }
+.clearfix:after { clear: both; }
+.clearfix { zoom: 1; }
+
+.alignleft {float: left}
+.alignright {float: right}
+.block {display: block}
+.inlineblock {display: inline-block}
+
+
+/* Responsive design. 
+--------------------------------*/
+
+@media only screen and (max-width: 480px) {
+
+
+}
+
+@media only screen and (max-width: 768px) {
+  
+	.ilFrame {
+	  	font-size: .9em
+	  }
+  
 }
