--- a/mluilias.css
+++ b/mluilias.css
@@ -564,6 +564,26 @@ td.il_RightColumn {
 	padding-left: 20px;
 }
 
+/* Section Heading */
+
+div.il_HeaderInner {
+	float: none;
+	margin: 1em 0;
+	padding-bottom: 0;
+	padding-right: 0;
+}
+
+div.ilHeaderDesc {
+	padding-left: 0;
+	margin-left: 51px;
+	font-size: 1em;
+	color: #A4A4A4;
+	border-top: 1px solid #F0F0F0;
+	-webkit-box-shadow: inset 0 1px 0 #fff;
+	-moz-box-shadow: inset 0 1px 0 #fff;
+	box-shadow: inset 0 1px 0 #fff;
+}
+
 /* Smoooooth & Rooooomy table rows */
 table.ilForm,
 .ilCLIRow1, .ilCLIRow2 {
@@ -621,7 +641,8 @@ div.il_ContainerItemCommands2 {
 	transition: opacity .2s ease-in-out;
 }
 
-	td.ilCLI:hover div.il_ContainerItemCommands2 {
+	td.ilCLI:hover div.il_ContainerItemCommands2,
+	.touch div.il_ContainerItemCommands2 {
 		-moz-opacity: 1;
 		-khtml-opacity: 1;
 		opacity: 1;
