--- a/mluilias.css
+++ b/mluilias.css
@@ -210,7 +210,7 @@ a.il_ContainerItemCommand2:link, a.il_ContainerItemCommand2:visited, a.il_Contai
 
 /* Form Styles */
 
-input, textarea, select, .submit {
+input, textarea, select, a.submit {
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -251,7 +251,7 @@ input[type="search"] {
 
 button, 
 input[type="submit"],
-.submit,
+a.submit,
 .button {
 	color: #1c5562;
 	background-color: #dfeae7;
@@ -268,7 +268,7 @@ input[type="submit"],
 	-moz-box-shadow: 0 1px 2px rgba(0,0,0,.1);
 	box-shadow: 0 1px 2px rgba(0,0,0,.1);
 	display: inline-block;
-	padding: .3em 1em;
+	padding: .2em 1em;
 	text-align: center;
 	position: relative;
 	line-height: 20px;
@@ -278,7 +278,7 @@ input[type="submit"],
 
 button:hover, 
 input[type="submit"]:hover,
-.submit:hover,
+a.submit:hover,
 .button:hover {
 	
 }
@@ -339,13 +339,22 @@ div.ilFrameH, div.ilFrameTL, div.ilFrameTR, div.ilFrameBR, div.ilFrameBL {
 	background: none
 }
 
+div.ilTopTitle {
+	color: #8a8a8a;
+}
+
+div.ilTopTitle span {
+	display: block;
+	color: #b7b7b7
+}
+
 div.ilLogin {
 	padding-right: 0;
 	float: right;
 }
 
 div.ilMainMenuSearch {
-	margin: 0
+	margin: 0;
 	float: right;
 	clear: right;
 }
@@ -354,15 +363,13 @@ form.ilMainMenuSearch > div {
 	position: relative !important;
 	float: right;
 	right: 0 !important;
+	margin-top: .5em !important
 }
 
-div.ilTopTitle {
-	color: #8a8a8a;
-}
-
-div.ilTopTitle span {
-	display: block;
-	color: #b7b7b7
+input.ilMainMenuSearch {
+	padding: .2em .5em;
+	background-image: none;
+	font-size: .9em !important
 }
 
 .ilMainHeader div:first-child img {
