--- a/mluilias.css
+++ b/mluilias.css
@@ -341,6 +341,8 @@ div.ilFrameH, div.ilFrameTL, div.ilFrameTR, div.ilFrameBR, div.ilFrameBL {
 
 div.ilTopTitle {
 	color: #8a8a8a;
+	padding-top: 0;
+	margin-top: 1.5em
 }
 
 div.ilTopTitle span {
@@ -368,11 +370,16 @@ form.ilMainMenuSearch > div {
 
 input.ilMainMenuSearch {
 	padding: .2em .5em;
+	margin-top: .5em;
 	background-image: none;
 	font-size: .9em !important
 }
 
-.ilMainHeader div:first-child img {
+div.ilMainHeader > div:first-child {
+	margin: .7em 0;
+}
+
+div.ilMainHeader div:first-child img {
 	width: 153px;
 	height: 80px;
 	-moz-opacity: 0.5;
