--- a/mluilias.css
+++ b/mluilias.css
@@ -558,7 +558,7 @@ a.tabinactive {
 
 div.il_SubTab {
 	border-bottom: 1px solid #9fc94e;
-	padding: .5em 1%;
+	padding: 0 1%;
 	width: 98%;
 	margin-bottom: .5em;
 	-webkit-box-shadow: 0 2px 4px rgba(0,0,0,.1);
@@ -575,6 +575,10 @@ div.il_SubTab {
 ul.il_SubTab {
 	padding: 0
 }
+
+	ul.il_SubTab a {
+		padding: .5em
+	}
 
 a.subtabactive {
 	color: #444;
@@ -740,7 +744,8 @@ div.ilFormInfo {
 	font-style: italic;
 	border-top: 1px solid #f3f3f3;
 	padding-top: .5em;
-	margin-top: .3em
+	margin-top: .3em;
+	font-size: .9em;
 }
 
 	td.ilCLI:hover div.il_ItemProperties {
